--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/public/css/reset.css">
+
 </head>
 <body>
-    <p>
-        ok
-    </p>
+    <main>
+        <header class="header">
+            <h2>CONSULTA TEMPO</h2>
+        </header>
+
+        <section class="sectionSearch">
+            <button class="btnNow">COMEÇAR AGORA</button>
+        </section> 
+    </main>
+    
     <script src="/public/js/index.js"></script>
 </body>
 </html>
