--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </header>
 
         <section class="sectionSearch">
+            <input type="text" class="inputSearch"> <br>
             <button class="btnNow">COMEÇAR AGORA</button>
         </section> 
     </main>
