--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/public/css/style.css">
-    <link rel="stylesheet" href="/public/css/reset.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="stylesheet" href="/public/css/reset.css">
 
 </head>
-<body>
-    <main>
-        <header class="header">
-            <h2>CONSULTA TEMPO</h2>
-        </header>
 
-        <section class="sectionSearch">
-            <input type="text" class="inputSearch"> <br>
-            <button class="btnNow">COMEÇAR AGORA</button>
-        </section> 
-    </main>
-    
-    <script src="/public/js/index.js"></script>
+<body>
+  <main>
+    <header class="header">
+      <h2>CONSULTA TEMPO</h2>
+    </header>
+
+    <section class="sectionSearch">
+      <input type="text" class="inputCity">
+      <input type="text" class="inputState"> <br>
+      <button class="btnNow">COMEÇAR AGORA</button>
+    </section>
+
+    <section class="sectionView">
+      <div>
+        <p class="temp"></p>
+        <p>temperatura atual</p>
+      </div>
+
+      <div>
+        <h3>sensação termica</h3>
+        <p class="feelsLike">ok</p>
+      </div>
+
+      <div>
+        <h3>umidade</h3>
+        <p class="humidity">ok</p>
+      </div>
+    </section>
+  </main>
+
+  <script src="/public/js/date.js"></script>
 </body>
+
 </html>
